--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "utils"]
 	path = utils
-	url = https://github.com/goToMain/c-utils.git
+	url = git@github.com:dmercer-google/c-utils.git
+	branch = dmercer-dev
+
